--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Box Renderer</title>
 <meta charset="UTF-8"/>
-<link rel="stylesheet" type="text/css" href="../main.css" />
+<link rel="stylesheet" type="text/css" href="main.css" />
 
 <!-- Vertex Shader -->
 <script id="vertex" type="x-shader/x-vertex">
